# serde_dynamodb_streams

serde_dynamodb/: Cargo.toml  README.md
serde_dynamodb/src/: lib.rs
serde_dynamodb/tests/: dynamodbstreams.rs
