[package]
name = "serde_dynamodb_streams"
version = "0.7.0"
authors = ["James Massey <james@trufintech.io>"]
description = "de/serialize struct to HashMap<String, AttributeValue> with Serde to use with Rusoto DynamoDB Streams. Just a fork of  mockersf/serde_dynamodb with different feature flags"
repository = "https://github.com/james-tru/serde_dynamodb_streams"
homepage = "https://github.com/james-tru/serde_dynamodb_streams"
documentation = "https://docs.rs/serde_dynamodb"
keywords = ["serde", "dynamodb", "rusoto"]
license = "MIT"
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "mockersf/serde_dynamodb" }

[dependencies]
serde = "1.0"
rusoto_dynamodbstreams = { version = "0.46.0", default-features = false, optional = true }
bytes = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = [ "derive" ] }
rusoto_core = "0.46.0"
rusoto_dynamodb = "0.46.0"

[features]
default = ["rusoto_dynamodbstreams", "rusoto_dynamodbstreams/default"]
rustls = ["rusoto_dynamodbstreams", "rusoto_dynamodbstreams/rustls"]
